crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__list-45-ansi-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| attention                          priority |
|▶ ◉ docs · app                           box |
|    escalated: exceeds authority             |
|    Which heading level should the API page… |
|  ✗ deploy-preview · infra               box |
|  ✓ fix-login · app                      box |
|  ● a rather long session title that ha…  m2 |
|                                             |
| idle                                        |
|  ◌ queued · app                          m2 |
|  ○ write tests · app                    box |
|                                             |

 0   0..1   fg=Reset bg=Reset
 0   1..10  fg=Reset bg=Reset BOLD
 0  10..36  fg=Reset bg=Reset
 0  36..44  fg=DarkGray bg=Reset
 0  44..45  fg=Reset bg=Reset
 1   0..1   fg=Cyan bg=Reset
 1   1..2   fg=Reset bg=Reset
 1   2..3   fg=Magenta bg=Reset BOLD
 1   3..8   fg=Reset bg=Reset BOLD
 1   8..14  fg=DarkGray bg=Reset BOLD
 1  14..41  fg=Reset bg=Reset
 1  41..44  fg=DarkGray bg=Reset
 1  44..45  fg=Reset bg=Reset
 2   0..4   fg=Reset bg=Reset
 2   4..44  fg=DarkGray bg=Reset
 2  44..45  fg=Reset bg=Reset
 3   0..45  fg=Reset bg=Reset
 4   0..1   fg=Cyan bg=Reset
 4   1..2   fg=Reset bg=Reset
 4   2..3   fg=Red bg=Reset
 4   3..18  fg=Reset bg=Reset
 4  18..26  fg=DarkGray bg=Reset
 4  26..41  fg=Reset bg=Reset
 4  41..44  fg=DarkGray bg=Reset
 4  44..45  fg=Reset bg=Reset
 5   0..1   fg=Cyan bg=Reset
 5   1..2   fg=Reset bg=Reset
 5   2..3   fg=Cyan bg=Reset
 5   3..13  fg=Reset bg=Reset
 5  13..19  fg=DarkGray bg=Reset
 5  19..41  fg=Reset bg=Reset
 5  41..44  fg=DarkGray bg=Reset
 5  44..45  fg=Reset bg=Reset
 6   0..1   fg=Cyan bg=Reset
 6   1..2   fg=Reset bg=Reset
 6   2..3   fg=Yellow bg=Reset
 6   3..42  fg=Reset bg=Reset
 6  42..44  fg=DarkGray bg=Reset
 6  44..45  fg=Reset bg=Reset
 7   0..45  fg=Reset bg=Reset
 8   0..1   fg=Reset bg=Reset
 8   1..5   fg=Reset bg=Reset BOLD
 8   5..45  fg=Reset bg=Reset
 9   0..1   fg=Cyan bg=Reset
 9   1..2   fg=Reset bg=Reset
 9   2..3   fg=Blue bg=Reset
 9   3..10  fg=Reset bg=Reset
 9  10..16  fg=DarkGray bg=Reset
 9  16..42  fg=Reset bg=Reset
 9  42..44  fg=DarkGray bg=Reset
 9  44..45  fg=Reset bg=Reset
10   0..1   fg=Cyan bg=Reset
10   1..2   fg=Reset bg=Reset
10   2..3   fg=DarkGray bg=Reset
10   3..15  fg=Reset bg=Reset
10  15..21  fg=DarkGray bg=Reset
10  21..41  fg=Reset bg=Reset
10  41..44  fg=DarkGray bg=Reset
10  44..45  fg=Reset bg=Reset
11   0..45  fg=Reset bg=Reset
