crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__list-unfocused-ansi-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|    escalated: exceeds authority             |
|    Which heading level should the API page… |
|  ✗ deploy-preview · infra               box |
|▶ ✓ fix-login · app                      box |

 0   0..4   fg=Reset bg=Reset
 0   4..44  fg=DarkGray bg=Reset
 0  44..45  fg=Reset bg=Reset
 1   0..45  fg=Reset bg=Reset
 2   0..1   fg=DarkGray bg=Reset
 2   1..2   fg=Reset bg=Reset
 2   2..3   fg=Red bg=Reset
 2   3..18  fg=Reset bg=Reset
 2  18..26  fg=DarkGray bg=Reset
 2  26..41  fg=Reset bg=Reset
 2  41..44  fg=DarkGray bg=Reset
 2  44..45  fg=Reset bg=Reset
 3   0..1   fg=DarkGray bg=Reset
 3   1..2   fg=Reset bg=Reset
 3   2..3   fg=Cyan bg=Reset BOLD
 3   3..13  fg=Reset bg=Reset BOLD
 3  13..19  fg=DarkGray bg=Reset BOLD
 3  19..41  fg=Reset bg=Reset
 3  41..44  fg=DarkGray bg=Reset
 3  44..45  fg=Reset bg=Reset
